--- a/public_html/index.html
+++ b/public_html/index.html
@@ -5,13 +5,25 @@
 	<head>
 		<title>Classy Games</title>
 		<meta charset="utf-8" />
-		<link href="assets/css/main.css" rel="stylesheet" type="text/css" />
-		<script src="assets/js/main.js" type="text/javascript"></script>
 		<script src="assets/js/jquery.js" type="text/javascript"></script>
+		<script src="assets/js/main.js" type="text/javascript"></script>
+		<link href="assets/css/main.css" rel="stylesheet" type="text/css" />
 	</head>
 
 	<body>
+		<div id="fb-root"></div>
 		<h1>Classy Games</h1>
+		<h2>Please login with Facebook to play!</h2>
+		<div class="fb-login-button" data-size="large"></div>
+		<div id="ClassyGames_GamesList">
+			<div id="ClassyGames_GamesList_Loading">Loading your games list...</div>
+			<div id="ClassyGames_GamesList_YourTurn">
+				<h3>Your Turn</h3>
+			</div>
+			<div id="ClassyGames_GamesList_TheirTurn">
+				<h3>Their Turn</h3>
+			</div>
+		</div>
 	</body>
 
 </html>
