--- a/public_html/index.html
+++ b/public_html/index.html
@@ -7,18 +7,26 @@
 		<meta charset="utf-8" />
 		<script src="assets/js/jquery.js" type="text/javascript"></script>
 		<script src="assets/js/main.js" type="text/javascript"></script>
+		<script src="assets/js/gameslist.js" type="text/javascript"></script>
+		<script src="assets/js/Board.js" type="text/javascript"></script>
 		<script src="assets/js/Game.js" type="text/javascript"></script>
 		<script src="assets/js/Person.js" type="text/javascript"></script>
 		<link href="assets/css/main.css" rel="stylesheet" type="text/css" />
+		<link href="assets/css/gameslist.css" rel="stylesheet" type="text/css" />
+		<link href="assets/css/board.css" rel="stylesheet" type="text/css" />
 	</head>
 
 	<body>
 		<div id="fb-root"></div>
+
+		<!-- the login screen -->
 		<h1>Classy Games</h1>
 		<div id="Facebook_Login">
 			<h2>Please login with Facebook to play!</h2>
 			<div class="fb-login-button" data-size="large"></div>
 		</div>
+
+		<!-- the games list screen -->
 		<div id="ClassyGames_GamesList">
 			<div id="ClassyGames_GamesList_Loading">
 				<h2>Loading your games list...</h2>
@@ -30,6 +38,103 @@
 			<div id="ClassyGames_GamesList_TheirTurn">
 				<h2>Their Turn</h2>
 				<ul id="ClassyGames_GamesList_TheirTurn_List"></ul>
+			</div>
+		</div>
+
+		<!-- the board screen -->
+		<div id="ClassyGames_Board">
+			<div id="ClassyGames_Board_Loading">
+				<h2>Loading your game...</h2>
+			</div>
+			<div id="ClassyGames_Board_Board">
+				<div class="ClassyGames_Board_Board_Row">
+					<div class="ClassyGames_Board_Board_Position_White" data-x="0" data-y="7" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_Black" data-x="1" data-y="7" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_White" data-x="2" data-y="7" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_Black" data-x="3" data-y="7" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_White" data-x="4" data-y="7" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_Black" data-x="5" data-y="7" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_White" data-x="6" data-y="7" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_Black" data-x="7" data-y="7" onclick="showPositionInfo(this)"></div>
+					<div class="clear"></div>
+				</div>
+				<div class="ClassyGames_Board_Board_Row">
+					<div class="ClassyGames_Board_Board_Position_Black" data-x="0" data-y="6" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_White" data-x="1" data-y="6" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_Black" data-x="2" data-y="6" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_White" data-x="3" data-y="6" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_Black" data-x="4" data-y="6" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_White" data-x="5" data-y="6" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_Black" data-x="6" data-y="6" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_White" data-x="7" data-y="6" onclick="showPositionInfo(this)"></div>
+					<div class="clear"></div>
+				</div>
+				<div class="ClassyGames_Board_Board_Row">
+					<div class="ClassyGames_Board_Board_Position_White" data-x="0" data-y="5" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_Black" data-x="1" data-y="5" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_White" data-x="2" data-y="5" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_Black" data-x="3" data-y="5" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_White" data-x="4" data-y="5" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_Black" data-x="5" data-y="5" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_White" data-x="6" data-y="5" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_Black" data-x="7" data-y="5" onclick="showPositionInfo(this)"></div>
+					<div class="clear"></div>
+				</div>
+				<div class="ClassyGames_Board_Board_Row">
+					<div class="ClassyGames_Board_Board_Position_Black" data-x="0" data-y="4" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_White" data-x="1" data-y="4" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_Black" data-x="2" data-y="4" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_White" data-x="3" data-y="4" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_Black" data-x="4" data-y="4" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_White" data-x="5" data-y="4" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_Black" data-x="6" data-y="4" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_White" data-x="7" data-y="4" onclick="showPositionInfo(this)"></div>
+					<div class="clear"></div>
+				</div>
+				<div class="ClassyGames_Board_Board_Row">
+					<div class="ClassyGames_Board_Board_Position_White" data-x="0" data-y="3" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_Black" data-x="1" data-y="3" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_White" data-x="2" data-y="3" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_Black" data-x="3" data-y="3" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_White" data-x="4" data-y="3" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_Black" data-x="5" data-y="3" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_White" data-x="6" data-y="3" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_Black" data-x="7" data-y="3" onclick="showPositionInfo(this)"></div>
+					<div class="clear"></div>
+				</div>
+				<div class="ClassyGames_Board_Board_Row">
+					<div class="ClassyGames_Board_Board_Position_Black" data-x="0" data-y="2" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_White" data-x="1" data-y="2" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_Black" data-x="2" data-y="2" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_White" data-x="3" data-y="2" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_Black" data-x="4" data-y="2" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_White" data-x="5" data-y="2" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_Black" data-x="6" data-y="2" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_White" data-x="7" data-y="2" onclick="showPositionInfo(this)"></div>
+					<div class="clear"></div>
+				</div>
+				<div class="ClassyGames_Board_Board_Row">
+					<div class="ClassyGames_Board_Board_Position_White" data-x="0" data-y="1" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_Black" data-x="1" data-y="1" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_White" data-x="2" data-y="1" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_Black" data-x="3" data-y="1" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_White" data-x="4" data-y="1" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_Black" data-x="5" data-y="1" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_White" data-x="6" data-y="1" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_Black" data-x="7" data-y="1" onclick="showPositionInfo(this)"></div>
+					<div class="clear"></div>
+				</div>
+				<div class="ClassyGames_Board_Board_Row">
+					<div class="ClassyGames_Board_Board_Position_Black" data-x="0" data-y="0" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_White" data-x="1" data-y="0" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_Black" data-x="2" data-y="0" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_White" data-x="3" data-y="0" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_Black" data-x="4" data-y="0" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_White" data-x="5" data-y="0" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_Black" data-x="6" data-y="0" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position_White" data-x="7" data-y="0" onclick="showPositionInfo(this)"></div>
+					<div class="clear"></div>
+				</div>
 			</div>
 		</div>
 	</body>
