board is now being properly drawn
but the pieces aren't being filled in yet...

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -48,91 +48,91 @@
 			</div>
 			<div id="ClassyGames_Board_Board">
 				<div class="ClassyGames_Board_Board_Row">
-					<div class="ClassyGames_Board_Board_Position_White" data-x="0" data-y="7" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_Black" data-x="1" data-y="7" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_White" data-x="2" data-y="7" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_Black" data-x="3" data-y="7" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_White" data-x="4" data-y="7" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_Black" data-x="5" data-y="7" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_White" data-x="6" data-y="7" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_Black" data-x="7" data-y="7" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_White" data-x="0" data-y="7" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_Black" data-x="1" data-y="7" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_White" data-x="2" data-y="7" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_Black" data-x="3" data-y="7" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_White" data-x="4" data-y="7" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_Black" data-x="5" data-y="7" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_White" data-x="6" data-y="7" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_Black" data-x="7" data-y="7" onclick="showPositionInfo(this)"></div>
 					<div class="clear"></div>
 				</div>
 				<div class="ClassyGames_Board_Board_Row">
-					<div class="ClassyGames_Board_Board_Position_Black" data-x="0" data-y="6" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_White" data-x="1" data-y="6" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_Black" data-x="2" data-y="6" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_White" data-x="3" data-y="6" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_Black" data-x="4" data-y="6" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_White" data-x="5" data-y="6" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_Black" data-x="6" data-y="6" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_White" data-x="7" data-y="6" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_Black" data-x="0" data-y="6" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_White" data-x="1" data-y="6" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_Black" data-x="2" data-y="6" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_White" data-x="3" data-y="6" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_Black" data-x="4" data-y="6" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_White" data-x="5" data-y="6" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_Black" data-x="6" data-y="6" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_White" data-x="7" data-y="6" onclick="showPositionInfo(this)"></div>
 					<div class="clear"></div>
 				</div>
 				<div class="ClassyGames_Board_Board_Row">
-					<div class="ClassyGames_Board_Board_Position_White" data-x="0" data-y="5" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_Black" data-x="1" data-y="5" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_White" data-x="2" data-y="5" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_Black" data-x="3" data-y="5" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_White" data-x="4" data-y="5" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_Black" data-x="5" data-y="5" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_White" data-x="6" data-y="5" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_Black" data-x="7" data-y="5" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_White" data-x="0" data-y="5" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_Black" data-x="1" data-y="5" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_White" data-x="2" data-y="5" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_Black" data-x="3" data-y="5" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_White" data-x="4" data-y="5" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_Black" data-x="5" data-y="5" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_White" data-x="6" data-y="5" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_Black" data-x="7" data-y="5" onclick="showPositionInfo(this)"></div>
 					<div class="clear"></div>
 				</div>
 				<div class="ClassyGames_Board_Board_Row">
-					<div class="ClassyGames_Board_Board_Position_Black" data-x="0" data-y="4" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_White" data-x="1" data-y="4" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_Black" data-x="2" data-y="4" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_White" data-x="3" data-y="4" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_Black" data-x="4" data-y="4" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_White" data-x="5" data-y="4" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_Black" data-x="6" data-y="4" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_White" data-x="7" data-y="4" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_Black" data-x="0" data-y="4" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_White" data-x="1" data-y="4" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_Black" data-x="2" data-y="4" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_White" data-x="3" data-y="4" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_Black" data-x="4" data-y="4" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_White" data-x="5" data-y="4" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_Black" data-x="6" data-y="4" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_White" data-x="7" data-y="4" onclick="showPositionInfo(this)"></div>
 					<div class="clear"></div>
 				</div>
 				<div class="ClassyGames_Board_Board_Row">
-					<div class="ClassyGames_Board_Board_Position_White" data-x="0" data-y="3" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_Black" data-x="1" data-y="3" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_White" data-x="2" data-y="3" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_Black" data-x="3" data-y="3" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_White" data-x="4" data-y="3" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_Black" data-x="5" data-y="3" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_White" data-x="6" data-y="3" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_Black" data-x="7" data-y="3" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_White" data-x="0" data-y="3" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_Black" data-x="1" data-y="3" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_White" data-x="2" data-y="3" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_Black" data-x="3" data-y="3" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_White" data-x="4" data-y="3" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_Black" data-x="5" data-y="3" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_White" data-x="6" data-y="3" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_Black" data-x="7" data-y="3" onclick="showPositionInfo(this)"></div>
 					<div class="clear"></div>
 				</div>
 				<div class="ClassyGames_Board_Board_Row">
-					<div class="ClassyGames_Board_Board_Position_Black" data-x="0" data-y="2" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_White" data-x="1" data-y="2" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_Black" data-x="2" data-y="2" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_White" data-x="3" data-y="2" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_Black" data-x="4" data-y="2" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_White" data-x="5" data-y="2" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_Black" data-x="6" data-y="2" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_White" data-x="7" data-y="2" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_Black" data-x="0" data-y="2" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_White" data-x="1" data-y="2" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_Black" data-x="2" data-y="2" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_White" data-x="3" data-y="2" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_Black" data-x="4" data-y="2" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_White" data-x="5" data-y="2" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_Black" data-x="6" data-y="2" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_White" data-x="7" data-y="2" onclick="showPositionInfo(this)"></div>
 					<div class="clear"></div>
 				</div>
 				<div class="ClassyGames_Board_Board_Row">
-					<div class="ClassyGames_Board_Board_Position_White" data-x="0" data-y="1" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_Black" data-x="1" data-y="1" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_White" data-x="2" data-y="1" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_Black" data-x="3" data-y="1" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_White" data-x="4" data-y="1" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_Black" data-x="5" data-y="1" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_White" data-x="6" data-y="1" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_Black" data-x="7" data-y="1" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_White" data-x="0" data-y="1" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_Black" data-x="1" data-y="1" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_White" data-x="2" data-y="1" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_Black" data-x="3" data-y="1" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_White" data-x="4" data-y="1" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_Black" data-x="5" data-y="1" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_White" data-x="6" data-y="1" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_Black" data-x="7" data-y="1" onclick="showPositionInfo(this)"></div>
 					<div class="clear"></div>
 				</div>
 				<div class="ClassyGames_Board_Board_Row">
-					<div class="ClassyGames_Board_Board_Position_Black" data-x="0" data-y="0" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_White" data-x="1" data-y="0" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_Black" data-x="2" data-y="0" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_White" data-x="3" data-y="0" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_Black" data-x="4" data-y="0" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_White" data-x="5" data-y="0" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_Black" data-x="6" data-y="0" onclick="showPositionInfo(this)"></div>
-					<div class="ClassyGames_Board_Board_Position_White" data-x="7" data-y="0" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_Black" data-x="0" data-y="0" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_White" data-x="1" data-y="0" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_Black" data-x="2" data-y="0" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_White" data-x="3" data-y="0" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_Black" data-x="4" data-y="0" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_White" data-x="5" data-y="0" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_Black" data-x="6" data-y="0" onclick="showPositionInfo(this)"></div>
+					<div class="ClassyGames_Board_Board_Position ClassyGames_Board_Board_Position_White" data-x="7" data-y="0" onclick="showPositionInfo(this)"></div>
 					<div class="clear"></div>
 				</div>
 			</div>
