bunch of random fixes really: refresh button games list works now and there's a back button on the game board page
done for the night

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -140,7 +140,16 @@
 			</div>
 		</div>
 
-		<div id="ActionBar">Hello</div>
+		<div id="ActionBar">
+			<div id="ClassyGames_GamesList_ActionBar">
+				<a href="#" onclick="loadGamesList();">Refresh</a>
+			</div>
+			<div id="ClassyGames_Board_ActionBar">
+				<a href="#" onclick="loadGamesList();">Back to Games List</a>
+				<a href="#" onclick="alert('send');">Send Move</a>
+				<a href="#" onclick="alert('undo');">Undo Move</a>
+			</div>
+		</div>
 	</body>
 
 </html>
