--- a/public_html/index.html
+++ b/public_html/index.html
@@ -147,7 +147,7 @@
 			<div id="ClassyGames_Board_ActionBar">
 				<a href="#" onclick="loadGamesList();">Back to Games List</a>
 				<a href="#" onclick="alert('send');">Send Move</a>
-				<a href="#" onclick="alert('undo');">Undo Move</a>
+				<a href="#" onclick="BOARD.undo();">Undo Move</a>
 			</div>
 		</div>
 	</body>
