send move partially implemented

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -146,7 +146,7 @@
 			</div>
 			<div id="ClassyGames_Board_ActionBar">
 				<a href="#" onclick="loadGamesList();">Back to Games List</a>
-				<a href="#" onclick="alert('send');">Send Move</a>
+				<a href="#" onclick="BOARD.send();">Send Move</a>
 				<a href="#" onclick="BOARD.undo();">Undo Move</a>
 			</div>
 		</div>
